Line chart for weekly fares - completed challenge.

--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "# 5. Create a new DataFrame from the pivot table DataFrame using loc on the given dates, '2019-01-01':'2019-04-29'.\n",
-    "daily_fares_by_date = daily_fares_pivoted.loc[:'2019-04-29']"
+    "daily_fares_by_date = daily_fares_pivoted.loc['2019-01-01':'2019-04-29']"
    ]
   },
   {
