Line chart for weekly fares - completed challenge.

--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -518,56 +518,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type   date               \n",
+       "Rural  2019-01-01 09:45:36    43.69\n",
+       "       2019-01-02 11:18:32    52.12\n",
+       "       2019-01-03 19:51:01    19.90\n",
+       "       2019-01-04 03:31:26    24.88\n",
+       "       2019-01-06 07:38:40    47.33\n",
+       "Name: fare, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Using groupby() to create a new DataFrame showing the sum of the fares \n",
     "#  for each date where the indices are the city type and date.\n",
-    "daily_fares = pyber_data_df.groupby([\"type\", \"date\"]).sum()[\"fare\"]"
+    "daily_fares = pyber_data_df.groupby([\"type\", \"date\"]).sum()[\"fare\"]\n",
+    "daily_fares.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>type</th>\n",
+       "      <th>date</th>\n",
+       "      <th>fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-01 09:45:36</td>\n",
+       "      <td>43.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-02 11:18:32</td>\n",
+       "      <td>52.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-03 19:51:01</td>\n",
+       "      <td>19.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-04 03:31:26</td>\n",
+       "      <td>24.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-06 07:38:40</td>\n",
+       "      <td>47.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index   type                 date   fare\n",
+       "0      0  Rural  2019-01-01 09:45:36  43.69\n",
+       "1      1  Rural  2019-01-02 11:18:32  52.12\n",
+       "2      2  Rural  2019-01-03 19:51:01  19.90\n",
+       "3      3  Rural  2019-01-04 03:31:26  24.88\n",
+       "4      4  Rural  2019-01-06 07:38:40  47.33"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3. Reset the index on the DataFrame you created in #1. This is needed to use the 'pivot()' function.\n",
     "#df = df.reset_index()\n",
-    "daily_fares = daily_fares.reset_index()"
+    "daily_fares = daily_fares.reset_index()\n",
+    "daily_fares.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:08:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:46:46</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47.74</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:07:24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:46:50</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:23:21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type                 Rural  Suburban  Urban\n",
+       "date                                       \n",
+       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
+       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
+       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
+       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
+       "2019-01-01 05:23:21    NaN       NaN  10.75"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Create a pivot table with the 'date' as the index, the columns ='type', and values='fare' \n",
     "# to get the total fares for each type of city by the date. \n",
-    "daily_fares_pivoted = daily_fares.pivot(\"date\", \"type\", \"fare\")"
+    "daily_fares_pivoted = daily_fares.pivot(\"date\", \"type\", \"fare\")\n",
+    "daily_fares_pivoted.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:08:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:46:46</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47.74</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:07:24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:46:50</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:23:21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 14:28:36</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 16:29:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 17:26:52</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 17:38:09</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.87</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 19:35:03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2196 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type                 Rural  Suburban  Urban\n",
+       "date                                       \n",
+       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
+       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
+       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
+       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
+       "2019-01-01 05:23:21    NaN       NaN  10.75\n",
+       "...                    ...       ...    ...\n",
+       "2019-04-28 14:28:36    NaN       NaN  11.46\n",
+       "2019-04-28 16:29:16    NaN       NaN  36.42\n",
+       "2019-04-28 17:26:52    NaN       NaN  31.43\n",
+       "2019-04-28 17:38:09    NaN     34.87    NaN\n",
+       "2019-04-28 19:35:03    NaN     16.96    NaN\n",
+       "\n",
+       "[2196 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 5. Create a new DataFrame from the pivot table DataFrame using loc on the given dates, '2019-01-01':'2019-04-29'.\n",
-    "daily_fares_by_date = daily_fares_pivoted.loc['2019-01-01':'2019-04-29']"
+    "daily_fares_by_date = daily_fares_pivoted.loc['2019-01-01':'2019-04-29']\n",
+    "daily_fares_by_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2019-01-01 00:08:16', '2019-01-01 00:46:46',\n",
+       "               '2019-01-01 02:07:24', '2019-01-01 03:46:50',\n",
+       "               '2019-01-01 05:23:21', '2019-01-01 09:45:36',\n",
+       "               '2019-01-01 12:32:48', '2019-01-01 14:40:14',\n",
+       "               '2019-01-01 14:42:25', '2019-01-01 14:52:06',\n",
+       "               ...\n",
+       "               '2019-04-28 09:25:03', '2019-04-28 10:54:14',\n",
+       "               '2019-04-28 11:40:49', '2019-04-28 11:49:26',\n",
+       "               '2019-04-28 12:48:34', '2019-04-28 14:28:36',\n",
+       "               '2019-04-28 16:29:16', '2019-04-28 17:26:52',\n",
+       "               '2019-04-28 17:38:09', '2019-04-28 19:35:03'],\n",
+       "              dtype='datetime64[ns]', name='date', length=2196, freq=None)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 6. Set the \"date\" index to datetime datatype. This is necessary to use the resample() method in Step 8.\n",
     "# df.index = pd.to_datetime(df.index)\n",
-    "daily_fares_by_date.index = pd.to_datetime(daily_fares_by_date.index)"
+    "daily_fares_by_date.index = pd.to_datetime(daily_fares_by_date.index)\n",
+    "daily_fares_by_date.index"
    ]
   },
   {
@@ -599,12 +933,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-06</th>\n",
+       "      <td>187.92</td>\n",
+       "      <td>721.60</td>\n",
+       "      <td>1661.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-13</th>\n",
+       "      <td>67.65</td>\n",
+       "      <td>1105.13</td>\n",
+       "      <td>2050.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-20</th>\n",
+       "      <td>306.00</td>\n",
+       "      <td>1218.20</td>\n",
+       "      <td>1939.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-27</th>\n",
+       "      <td>179.69</td>\n",
+       "      <td>1203.28</td>\n",
+       "      <td>2129.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-02-03</th>\n",
+       "      <td>333.08</td>\n",
+       "      <td>1042.79</td>\n",
+       "      <td>2086.94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type         Rural  Suburban    Urban\n",
+       "date                                 \n",
+       "2019-01-06  187.92    721.60  1661.68\n",
+       "2019-01-13   67.65   1105.13  2050.43\n",
+       "2019-01-20  306.00   1218.20  1939.02\n",
+       "2019-01-27  179.69   1203.28  2129.51\n",
+       "2019-02-03  333.08   1042.79  2086.94"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. Create a new DataFrame using the \"resample()\" function by week 'W' and get the sum of the fares for each week.\n",
-    "weekly_fare_summary = daily_fares_by_date.resample('W').sum()"
+    "weekly_fare_summary = daily_fares_by_date.resample('W').sum()\n",
+    "weekly_fare_summary.head()"
    ]
   },
   {
